# AnnotatedCode

./: .gitignore  .gitmodules  readme.md
TarsGo/: AUTHORS  CONTRIBUTING.md  Changelog.md  LICENSE  README.md  README.zh.md
TarsGo/docs/: tars_go_performance.md  tars_go_quickstart.md  tars_go_quickstart_en.md
TarsGo/hack/: generate-authors.sh
TarsGo/tars/: .gitignore  VERSION.txt  adapter.go  admin.go  application.go  appprotocol.go  communicator.go  config.go  endpointmanager.go  filter.go  httpserver.go  logger.go  makefile.tars  message.go  nodef.go  notifyf.go  object.go  panic.go  propertyf.go  rconfig.go  remotelogger.go  servant.go  servanthandle.go  setting.go  statf.go  tarsprotocol.go
boost-lockfree/: spsc_queue.hpp
coroutine/: LICENSE  Makefile  README.md  coroutine.c  coroutine.h  main.c
etcd/raft/: raft.go
flinter/: Makefile.am  MurmurHash3.c  MurmurHash3.h  babysitter.c  babysitter.h  charset.cpp  charset.h  charset_iconv.cpp  charset_icu.cpp  cmdline.c  cmdline.h  common.h  convert.cpp  convert.h  crawler.cpp  crawler.h  daemon.c  daemon.h  encode.cpp  encode.h  encode_crypto.cpp  encode_cs.cpp  envvars.c  envvars.h  explode.cpp  explode.h  factory.h  hash.c  hash.h  hash_crypto.c  logger.cpp  logger.h  mkdirs.c  mkdirs.h  msleep.c  msleep.h  object_map.h  object_pool.h  openssl.cpp  openssl.h  (+24 more)
flinter/fastcgi/: cgi.cpp  cgi.h  common_filters.cpp  common_filters.h  custom_dispatcher.h  default_handlers.cpp  default_handlers.h  dispatcher.cpp  dispatcher.h  filter.h  http_exception.cpp  http_exception.h  http_status_codes.cpp  http_status_codes.h
flinter/fastcgi/main/: Makefile.am  fastcgi_main.cpp  fastcgi_main.h  main.cpp
flinter/linkage/: abstract_io.h  async_router.h  easy_context.cpp  easy_context.h  easy_handler.cpp  easy_handler.h  easy_server.cpp  easy_server.h  easy_tuner.h  file_descriptor_io.cpp  file_descriptor_io.h  interface.cpp  interface.h  linkage.cpp  linkage.h  linkage_base.cpp  linkage_base.h  linkage_handler.cpp  linkage_handler.h  linkage_peer.cpp  linkage_peer.h  linkage_worker.cpp  linkage_worker.h  listener.cpp  listener.h  resolver.cpp  resolver.h  route_handler.h  ssl_context.cpp  ssl_context.h  ssl_io.cpp  ssl_io.h  ssl_peer.h
flinter/thread/: abstract_thread_pool.cpp  abstract_thread_pool.h  condition.cpp  condition.h  fixed_thread_pool.cpp  fixed_thread_pool.h  growable_thread_pool.cpp  growable_thread_pool.h  keyed_thread_pool.cpp  keyed_thread_pool.h  mutex.cpp  mutex.h  mutex_locker.h  read_locker.h  read_write_lock.cpp  read_write_lock.h  scheduler.cpp  scheduler.h  semaphore.cpp  semaphore.h  spinlock.h  thread.cpp  thread.h  thread_job.h  tls.cpp  tls.h  write_locker.h
flinter/types/: atomic.h  auto_buffer.h  decimal.cpp  decimal.h  read_only_map.h  scoped_ptr.h  shared_ptr.h  tree.cpp  tree.h  tree_cs.cpp  tree_json.cpp  tree_xml.cpp  uint128_t.cpp  uint128_t.h  unordered_hash.h  unordered_map.h  unordered_set.h  uuid.cpp  uuid.h
flinter/zookeeper/: council.cpp  council.h  naming.cpp  naming.h  zookeeper.cpp  zookeeper.h  zookeeper_callback.cpp  zookeeper_callback.h  zookeeper_tracker.cpp  zookeeper_tracker.h  zookeeper_watcher.cpp  zookeeper_watcher.h
gin-1.6.3/: gin.go  tree.go
go-restful/: CHANGES.md  container.go  go-restful源码分析.md  jsr311.go  route.go  route_builder.go
go-restful/examples/: restful-CORS-filter.go  restful-NCSA-logging.go  restful-basic-authentication.go  restful-curly-router.go  restful-curly-router_test.go  restful-encoding-filter.go  restful-filters.go  restful-form-handling.go  restful-hello-world.go  restful-html-template.go  restful-multi-containers.go  restful-no-cache-filter.go  restful-openapi.go  restful-options-filter.go  restful-path-tail.go  restful-resource-functions.go  restful-serve-static.go  restful-swagger.go  restful-user-resource.go
groupcache/: .gitignore
groupcache/consistenthash/: consistenthash.go
grpc-go-1.35.0/: go.mod  go.sum  rpc_util.go  server.go
inject/: inject.go
leveldb/: .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  NEWS
leveldb-1.20/: .travis.yml  LICENSE  README.md  TODO
leveldb-1.20/db/: corruption_test.cc  db_bench.cc  db_impl.cc  db_iter.cc  db_test.cc  dbformat.cc  dbformat_test.cc  filename.cc  leveldbutil.cc  log_format.h  log_test.cc  log_writer.cc  memtable.h  repair.cc  skiplist_test.cc  table_cache.h  version_edit.cc  version_edit.h  version_edit_test.cc  version_set.h  version_set_test.cc  write_batch_internal.h  write_batch_test.cc
leveldb-1.20/doc/: benchmark.html
leveldb-1.20/port/: README  port_config.h.in  port_stdcxx.h  thread_annotations.h
leveldb-1.20/table/: block.cc  block_builder.cc  filter_block.cc  filter_block_test.cc  merger.cc  table.cc  table_builder.cc  table_test.cc
leveldb-1.20/util/: arena.cc  arena_test.cc  bloom.cc  bloom_test.cc  cache.cc  cache_test.cc  coding.h  comparator.cc  crc32c.cc  crc32c.h  crc32c_test.cc  env.cc  env_posix.cc  env_posix_test_helper.h  hash_test.cc  histogram.h  logging.cc  logging.h  mutexlock.h  options.cc  status_test.cc  testharness.h  testutil.cc  testutil.h
leveldb/cmake/: leveldbConfig.cmake
leveldb/db/: autocompact_test.cc  builder.cc  builder.h  c.cc  c_test.c  db_impl.cc  db_impl.h  (+16 more)
libco/: CMakeLists.txt  Makefile  co.mk  co_closure.h  co_epoll.cpp  co_epoll.h  co_hook_sys_call.cpp  co_routine.cpp  co_routine.h  co_routine_inner.h  co_routine_specific.h  coctx.cpp  coctx.h  coctx_swap.S  example_closure.cpp  example_cond.cpp  example_copystack.cpp  example_echocli.cpp  example_echosvr.cpp  example_poll.cpp  example_setenv.cpp  example_specific.cpp  example_thread.cpp  libco源码分析.md  readme.txt
libevent/: .gitignore  buffer.c  bufferevent-internal.h  bufferevent.c  bufferevent_sock.c  epoll.c  epolltable-internal.h  event-internal.h  event.c  evmap.c  evutil_time.c  http.c  libevent源码分析-http相关.md  libevent源码分析-listener分析.md  libevent源码分析-时间管理.md  libevent源码阅读-epoll的封装.md  libevent源码阅读-signal事件.md  libevent源码阅读.md  listener.c  minheap-internal.h  signal.c
muduo/: README
redis-5.0/: README.md
sofa-pbrpc/: .gitignore  sofa-pbrpc学习.md
(+223 files in other folders)
